--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <header id="homeHeader">
         <h1>Elliot's Homepage</h1>
+        <h3>Now on Github!</h3>
     </header>
 
     <div id="pageSelect">
