--- a/EuropeTour/europeTour1_UK1.html
+++ b/EuropeTour/europeTour1_UK1.html
@@ -28,6 +28,10 @@
     </div>
 
             <ul>
+            <li><img src="europeTour1\IMG018.jpg"></li>
+            <li><img src="europeTour1\IMG022.jpg"></li>
+            <li><img src="europeTour1\IMG019.jpg"></li>
+            <li><img src="europeTour1\IMG020.jpg"></li>
             <li><img src="europeTour1\IMG001.JPG"></li>
             <li><img src="europeTour1\IMG002.JPG"></li>
             <li><img src="europeTour1\IMG003.JPG"></li>
@@ -45,7 +49,8 @@
             <li><img src="europeTour1\IMG015.JPG"></li>
             <li><img src="europeTour1\IMG016.JPG"></li>
             <li><img src="europeTour1\IMG017.JPG"></li>
-
+            <li><img src="europeTour1\IMG023.jpg"></li>
+            <li><img src="europeTour1\IMG024.jpg"></li>
 
 
 
