--- a/EuropeTour/europeTour1_UK1.html
+++ b/EuropeTour/europeTour1_UK1.html
@@ -11,6 +11,8 @@
         <h2>Europe Bike Tour</h2>
         <br>
         <h3>United Kingdom Part 1</h3>
+        <br>
+        <h4>Posted on June 20th 2025</h4>
     </header>
     <br>
     <div id="pageSelect">
@@ -20,7 +22,7 @@
         <a href="../videos.html"> Videos</a>
     </div>
 
-    
+    <post>
             <p>Getting the bike boxed up and over to Edinburgh was quite the job. Thankfully I had my dad to help out and drive me up to Logan</p>
             <ul>
             <li><img src="europeTour1\IMG018.jpg"></li>
@@ -74,7 +76,7 @@
 
             <!--  Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens!  -->
           </ul>
-
+    </post>
     </div>
 </body>
 
