--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>
                    I am currently on a bike tour through a couple sections of Europe, starting in Edinunburgh. Check on some images at the link below. 
                 </p>
-                <a href="EuropeTour/europeTour1_UK1.html">Link to Page</a>
+                <a href="EuropeTour/europeTour1.html">Link to Page</a>
             </article>
         </div>
 
