--- a/EuropeTour/europeTour4.html
+++ b/EuropeTour/europeTour4.html
@@ -64,7 +64,8 @@
             <li><img src="europeTour4\IMG026.jpg"></li>
 
             </ul>
-            
+            <br>
+            <img src="europeTour4\UKMap.jpg">
 
             
     </article>
