--- a/EuropeTour/europeTour5.html
+++ b/EuropeTour/europeTour5.html
@@ -72,6 +72,7 @@
             <li><img src="europeTour5\IMG028.jpg"></li>
             </ul>
             
+            <img src="europeTour4\FBNGMap.jpg">
 
             
     </article>
