--- a/EuropeTour/europeTour5.html
+++ b/EuropeTour/europeTour5.html
@@ -11,7 +11,7 @@
         <h2>Europe Bike Tour</h2>
         <br>
         <br>
-        <h3>United Kingdom Part 4</h3>
+        <h3>France, Belgium, Netherlands, and Germany</h3>
         <br>
         <h4>Posted on July 23rd 2025</h4>
     </header>
